# fetcher

./: .env.example  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  fetch-models.yml  validate-branch.yml
data/: 2025-10-11T15-11-32Z.csv  2025-10-11T15-11-32Z.yaml  2025-10-11T16-13-39Z.json  2025-10-13T02-45-52Z.csv  2025-10-13T02-45-52Z.json  2025-10-13T02-45-52Z.yaml  2025-10-14T00-39-40Z.csv  2025-10-14T00-39-40Z.json  2025-10-14T00-39-40Z.yaml  2025-10-15T00-41-38Z.csv  2025-10-15T00-41-38Z.json  2025-10-15T00-41-38Z.yaml  2025-10-16T00-41-30Z.csv  2025-10-16T00-41-30Z.json  2025-10-16T00-41-30Z.yaml  2025-10-17T00-40-47Z.csv  2025-10-17T00-40-47Z.json  2025-10-17T00-40-47Z.yaml  2025-10-18T00-38-32Z.csv  2025-10-18T00-38-32Z.json  2025-10-18T00-38-32Z.yaml  2025-10-19T00-45-57Z.csv  2025-10-19T00-45-57Z.json  2025-10-19T00-45-57Z.yaml  2025-10-20T00-44-49Z.csv  2025-10-20T00-44-49Z.json  2025-10-20T00-44-49Z.yaml  2025-10-21T00-41-54Z.csv  2025-10-21T00-41-54Z.json  2025-10-21T00-41-54Z.yaml  2025-10-22T00-43-03Z.csv  2025-10-22T00-43-03Z.json  2025-10-22T00-43-03Z.yaml  2025-10-23T00-41-28Z.csv  2025-10-23T00-41-28Z.json  2025-10-23T00-41-28Z.yaml  2025-10-24T00-38-44Z.csv  2025-10-24T00-38-44Z.json  2025-10-24T00-38-44Z.yaml  2025-10-25T00-40-31Z.csv  (+800 more)
docs/: index.html  models.csv  models.json  models.yaml  styles.css
docs/api/: README.md  api.json  index.html  stats.json
scripts/: generate_api_endpoints.py  generate_html.py
src/fetcher/: CLAUDE.md  __init__.py  (+5 more)
tests/: test_anthropic_provider.py  test_google_provider.py
(+19 files in other folders)
